thesis paper fixes+ijcqi17

--- a/Proposal/ijcai17/jair paper.tex
+++ b/Proposal/ijcai17/jair paper.tex
@@ -820,7 +820,7 @@ Unsupervised knowledge-based feature generation techniques aim to incorporate ad
 	\item Propositionalization \cite{kramer2000bottom} approaches are a class of feature generation algorithms that rely on relational data to serve as external knowledge. They operate by using a combination of operators in order to create first-order logic predicates connecting existing data and relational knowledge. 
 	
 	\citeA{cheng2011automatedfull} devise a generic propositionalization framework  using linked data via relation-based queries, and offer an insight into using taxonomy-based features by creating features that list the taxonomic class relationships of a given entity.
-	The \emph{Expander-FG} algorithm described in section \ref{shallow_section} is another example of propositionalization algorithms.
+	The \emph{Shallow} algorithm described in section \ref{shallow_section} is another example of propositionalization algorithms.
 	\item Data mining approaches such as FeGeLOD \cite{paulheim2012unsupervisedfull} aim to directly utilize linked data in order to automatically enrich existing data, yielding additional information on existing entities within the data. FeGeLOD uses feature values as entities and adds related knowledge to the example, thus creating additional features for that example. FeGeLOD then employs feature selection to filter out poor, non-representative features. Our approach can be seen as a continuation of this approach, as we keep the notions of feature enrichment and feature selection, but utilize a supervised enrichment process rather than an unsupervised one.
 \end{itemize}
 These knowledge-based techniques serve as a powerful tool for feature generation based on knowledge. Despite this fact, the unsupervised nature of these approaches tends to lead to a shallow exploration of the knowledge base, as deep unguided search is computationally expensive, and leads to a potentially large number of features. As a result of this, many of these approaches rely on feature selection to filter out irrelevant features.
