--- a/Proposal/thesis_paper/jair paper.tex
+++ b/Proposal/thesis_paper/jair paper.tex
@@ -77,7 +77,7 @@ There have been several efforts in utilizing Linked Data for unsupervised featur
 \citeA{paulheim2012unsupervisedfull} developed FeGeLOD, an automated, fully unsupervised framework that constructs features by using entity recognition techniques to locate semantically meaningful features in the data set, and expand upon those entities using relations within the Semantic Web. %They then use feature selection techniques to remove features with a large percentage of missing, identical, or unique\footnote{Values which only appear in a single example} values.
 
 In this work, we build upon these existing approaches in order to present a new supervised methodology for generating complex features based on a relational knowledge base. Our algorithm recursively constructs new learning problems from existing feature values, then uses knowledge bases such as the Semantic Web to construct the features for the new learning problem.
-Using common induction algorithms, we can then construct a classifier that can be applied to the original problem, giving us a complex feature which takes advantage of external relational knowledge in a meaningful way.
+Using common induction algorithms, we can then construct a classifier that can be applied to the original problem, giving us a complex feature that takes advantage of external relational knowledge in a meaningful way.
 The contributions of this approach are threefold. First, usage of training data allows for an automated, concept-driven exploration of the large space of possible features, in a manner similar to deductive approaches. Second, this approach can be applied recursively within the constructed learning problem, allowing for easier discovery of complex features. Third, it can effectively utilize one-to-many relations, which are more difficult to use in unsupervised approaches.
 
 \section{Motivation} \label{motivation}
@@ -235,7 +235,7 @@ The approach shown in \emph{Expander-FG} has two major issues, however:
 \end{itemize}
 We could potentially resolve the second issue by applying \emph{Expander-FG} to the generated features, giving us additional hops and thus more complex features. The downside of this expansion is that it causes an exponential increase in the number of generated features.
 
-To that end, we propose an alternative knowledge-based feature generation algorithm. Given the input $\langle S,F,{\cal R} \rangle$, for each feature $f_i\in F, f_i:O\rightarrow I_i$, our algorithm will create a recursive problem whose objects are the values of $f_i$, where values associated with positive examples in $S$ labelled positive, and those associated with negative examples labelled negative. Features for this generated problem will be created using the relations in ${\cal R}$. Once this new learning problem $\langle S'_i,F'_i\rangle$ is defined, an induction algorithm is used to create a classifier $h_i:I_i\rightarrow Y$. Finally, our algorithm outputs a single generated feature for $f_i$, $f'_i(x)=h_i\circ f_i=h_i(f_i(x)), f'_i:O\rightarrow Y$.
+To that end, we propose an alternative knowledge-based feature generation algorithm. Given the input $\langle S,F,{\cal R} \rangle$, for each feature $f_i\in F, f_i:O\rightarrow I_i$, our algorithm will create a recursive problem whose objects are the values of $f_i$, where values associated with positive examples in $S$ are labelled positive, and those associated with negative examples are labelled negative. Features for this generated problem will be created using the relations in ${\cal R}$. Once this new learning problem $\langle S'_i,F'_i\rangle$ is defined, an induction algorithm is used to create a classifier $h_i:I_i\rightarrow Y$. Finally, our algorithm outputs a single generated feature for $f_i$, $f'_i(x)=h_i\circ f_i=h_i(f_i(x)), f'_i:O\rightarrow Y$.
 We name this algorithm \emph{FEAGURE} (FEAture Generation Using REcursive induction).
 
 We note that during the construction of our recursive learning problem, we can apply a feature generation algorithm on $\langle S'_i,F'_i,{\cal R} \rangle$. In particular, we can apply \emph{FEAGURE} to the constructed learning problem, hence the word ``recursive" in its name.
@@ -255,6 +255,8 @@ Given $R_j$, assuming it is relevant to the problem domain, meaning $v_i(S)\cap 
 The result of this process is a feature map for $S'_i$ that includes all such relations,, denoted as $F_{\cal R}$. %TODO: mby this is a bit laconic? needs more?
 
 We now have a complete induction problem $\langle S'_i,F_{\cal R} \rangle$ for which we can train a classifier using induction, giving us $h_i:I_i\rightarrow Y$. We can then use this $h_i$ on objects in $S$ as discussed above, giving us a new feature $f'_{i}(x)=h_{i}(f_{i}(x)), f'_{i}:O\rightarrow Y$. 
+
+\subsubsection{Notes and special cases}
 
 We note that once we have an induction problem over $I_i$, we can apply our approach recursively on $S'_i$ in order to create additional features. We can see an example of this in section \ref{motivation}, wherein we construct a second-level problem on countries of origin to correctly identify the appropriate conditions that signify high risk countries.
 
@@ -819,7 +821,7 @@ Unsupervised knowledge-based feature generation techniques aim to incorporate ad
 	\item Concept based approaches such as ESA \cite{gabrilovich2009wikipediafull} ,for example, present a method for generating features that are based on semantic concepts. These approaches rely on complex techniques to create a mapping between existing data and the semantic concepts that serve as external knowledge. This mapping is then used on the given problem, enriching the data with external concepts that can be used as features. ESA, for example, maps texts to Wikipedia pages that are used as concepts.
 	\item Propositionalization \cite{kramer2000bottom} approaches are a class of feature generation algorithms that rely on relational data to serve as external knowledge. They operate by using a combination of operators in order to create first-order logic predicates connecting existing data and relational knowledge. 
 	
-	\citeA{cheng2011automatedfull} devise a generic propositionalization framework  using linked data via relation-based queries, and offer an insight into using taxonomy-based features by creating features that list the taxonomic class relationships of a given entity.
+	\citeA{cheng2011automatedfull} devised a generic propositionalization framework  using linked data via relation-based queries, and offer an insight into using taxonomy-based features by creating features that list the taxonomic class relationships of a given entity.
 	The \emph{Expander-FG} algorithm described in section \ref{shallow_section} is another example of propositionalization algorithms.
 	\item Data mining approaches such as FeGeLOD \cite{paulheim2012unsupervisedfull} aim to directly utilize linked data in order to automatically enrich existing data, yielding additional information on existing entities within the data. FeGeLOD uses feature values as entities and adds related knowledge to the example, thus creating additional features for that example. FeGeLOD then employs feature selection to filter out poor, non-representative features. Our approach can be seen as a continuation of this approach, as we keep the notions of feature enrichment and feature selection, but utilize a supervised enrichment process rather than an unsupervised one.
 \end{itemize}
